# routes/api.php
@@ -60,7 +60,11 @@ Route::middleware(['auth:sanctum', 'auth.sanctum.custom'])->group(function () {
 });
 
 Route::middleware(['auth:sanctum', 'auth.sanctum.custom'])->group(function () {
-    Route::post('/get-discharged-data', [Referral::class, 'get_discharged_data'])->name('referral.get.discharge.data');
+    Route::get('/get-discharged-data/{LogID}', [Referral::class, 'get_discharged_data'])->name('referral.get.discharge.data');
+});
+
+Route::middleware(['auth:sanctum', 'auth.sanctum.custom'])->group(function () {
+    Route::get('/get-accredited-facilities', [Referral::class, 'get_accredited_facilities'])->name('referral.get_accredited_facilities');
 });
 
 
